#tefbd more edits

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -80,7 +80,7 @@ For complex models and analyses, it is best to create \Rev script files that wil
 In this exercise, you will work primarily in your text editor and create a set of modular files that will be easily managed and interchanged.
 
 \bigskip
-\subsection{Start the Master \Rev File and Import Data}
+\subsection{Start the Master \Rev File and Import Data}\label{sect:StartMasterRev}
 
 {\begin{framed}
 Open your text editor and create the master \Rev file called {\textcolor{red}{\cl{mcmc\_TEFBD.Rev}}} in the \cl{scripts} directory.
@@ -218,7 +218,7 @@ mvi = 1
 
 \bigskip
 
-\subsection{The Fossilized Birth-Death Process}
+\subsection{The Fossilized Birth-Death Process}\label{sect:ModelFBD}
 
 {\begin{framed}
 Open your text editor and create the fossilized birth-death model file called {\textcolor{red}{\cl{model\_FBDP\_TEFBD.Rev}}} in the \cl{scripts} directory.
@@ -350,7 +350,7 @@ Enter the \Rev code provided in this section in the new model file.
 \subsection{Complete MCMC File}
 
 {\begin{framed}
-Return to the master \Rev file you created in Section \ref{} called {\textcolor{red}{\cl{mcmc\_TEFBD.Rev}}} in the \cl{scripts} directory.
+Return to the master \Rev file you created in Section \ref{sect:StartMasterRev} called {\textcolor{red}{\cl{mcmc\_TEFBD.Rev}}} in the \cl{scripts} directory.
 
 Enter the \Rev code provided in this section in this file.
 \end{framed}}
