broke up paragraphs in FBD text section #TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -229,7 +229,9 @@ Open your text editor and create the fossilized birth-death model file called {\
 Enter the \Rev code provided in this section in the new model file.
 \end{framed}}
 
-Two key parameters of the FBD process are the birth rate (the rate at which lineages are added to the tree) and the death rate (the rate at which lineages are removed from the tree). We'll place exponential priors on both of these values. An exponential prior with a $\lambda$ =  10 places a higher probability on values less than 0.4 for these parameters. 
+Two key parameters of the FBD process are the birth rate (the rate at which lineages are added to the tree) and the death rate (the rate at which lineages are removed from the tree). 
+We'll place exponential priors on both of these values. 
+An exponential prior with a $\lambda$ =  10 places a higher probability on values closer to zero than one for these parameters. 
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -238,7 +240,10 @@ death_rate ~ dnExponential(10)
 \end{lstlisting}
 \end{snugshade*}}
 
-Now that the priors have been specified, we give RevBayes some information on how to sample values for our parameters. We'll use a scaling move, which changes the value sampled multiplicatively with the tuning parameter. We will use three different tuning parameters, which govern the size of the move. Including multiple tuning parameters improves mixing. 
+Now that the priors have been specified, we give RevBayes some information on how to sample values for our parameters. 
+We'll use a scaling move, which changes the value sampled multiplicatively with the tuning parameter. 
+We will use three different tuning parameters, which govern the size of the move. 
+Including multiple tuning parameters improves mixing. 
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -251,7 +256,9 @@ moves[mvi++] = mvScale(death_rate, delta=1, weight=3.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-In order to print nodes in our graph to output (also called \textit{monitoring}), we need to create deterministic nodes for the diversification and turnover. Deterministic nodes are value transformations between existing stochastic nodes. So we will define diversification and turnover as deterministic nodes.
+In order to print nodes in our graph to output (also called \textit{monitoring}), we need to create deterministic nodes for the diversification and turnover. 
+Deterministic nodes are value transformations between existing stochastic nodes. 
+So we will define diversification and turnover as deterministic nodes.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -260,7 +267,8 @@ turnover := death_rate/birth_rate
 \end{lstlisting}
 \end{snugshade*}}
 
-All extant bears are represented in this dataset. Therefore, we can fix the sampling probability of extant lineages to 1.
+All extant bears are represented in this dataset. 
+Therefore, we can fix the sampling probability of extant lineages to 1.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -268,7 +276,8 @@ rho <- 1.0
 \end{lstlisting}
 \end{snugshade*}}
 
-The rate of sampling fossils ($\psi$), on the other hand is not known. We will use an exponential prior on this parameter as well, and use a slide move to sample values from our distribution.
+The rate of sampling fossils ($\psi$), on the other hand is not known. 
+We will use an exponential prior on this parameter as well, and use a slide move to sample values from our distribution.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -281,7 +290,9 @@ moves[mvi++] = mvScale(birth_rate, lambda=1.0, weight=3.0)
 
 Under the FBD model, the process is conditioned on the age of the origin, or the start of the process. 
 We will specify a uniform distribution on the age of the origin. If you looked in the bears taxa file, you might notice that the age of the oldest fossil is slightly younger than the upper bound of the uniform distribution on the origin age. 
-For this parameter, we will use a sliding window move. A sliding window move samples within an interval (defined by \cl{delta}) . Sliding window moves can be tricky for small values, as the window may overlap zero. However, for parameters such as the origin, there is little risk of this being an issue.
+For this parameter, we will use a sliding window move. A sliding window move samples within an interval (defined by \cl{delta}). 
+Sliding window moves can be tricky for small values, as the window may overlap zero. 
+However, for parameters such as the origin, there is little risk of this being an issue.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -292,7 +303,8 @@ moves[mvi++] = mvSlide(origin_time, delta=1, weight=10.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-All the parameters of the FBD process are now defined. The next step is to combine these parameters to define the tree prior as the FBD.
+All the parameters of the FBD process are now defined. 
+The next step is to combine these parameters to define the tree prior as the FBD.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -300,7 +312,8 @@ tree_prior = dnFBDP(origin=origin_time, lambda=birth_rate, mu=death_rate, psi=ps
 \end{lstlisting}
 \end{snugshade*}}
 
-Next, we will define the \cl{fbd\_tree} variable as a random variable. It will be used to generate trees under the FBD process that conform to our clade constraints. 
+Next, we will define the \cl{fbd\_tree} variable as a random variable. 
+It will be used to generate trees under the FBD process that conform to our clade constraints. 
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -308,7 +321,9 @@ fbd_tree ~ dnConstrainedTopology(tree_prior, constraints)
 \end{lstlisting}
 \end{snugshade*}}
 
-Finally, we can also create deterministic nodes for other quantities we might be interested in monitoring. Below, we will define a monitor that prints the number of fossils that are inferred to be `sampled ancestors' - lineages that are present in the phylogeny, and have descendants present on the tree. We will also define a deterministic node for the age of the crown group of bears, using the previously-defined extant bear constraint (Section \ref{}).
+Finally, we can also create deterministic nodes for other quantities we might be interested in monitoring. 
+Below, we will define a monitor that prints the number of fossils that are inferred to be `sampled ancestors' - lineages that are present in the phylogeny, and have descendants present on the tree. 
+We will also define a deterministic node for the age of the crown group of bears, using the previously-defined extant bear constraint (Section \ref{}).
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -349,7 +364,8 @@ Enter the \Rev code provided in this section in the new model file.
 \end{framed}}
 
 Morphology has traditionally been assumed to evolve according to a generalized Jukes-Cantor matrix in which all characters have the same transition rates, and all characters have an equal probability of making forwards or backwards transitions (i.e., the same probability of going from 0 to 1 as 1 to 0). 
-This model is called the Mk model. We will use a hyperprior on state frequencies to relax these two assumptions. Because we are working with binary data, we can use a discrete Beta distribution to describe the variation in stationary state frequencies across characters. 
+This model is called the Mk model. We will use a hyperprior on state frequencies to relax these two assumptions. 
+Because we are working with binary data, we can use a discrete Beta distribution to describe the variation in stationary state frequencies across characters. 
 The Beta distribution has two parameters, $\alpha$ and $\beta$ which describe its shape. 
 For simplicity, we will assume that $\alpha$ = $\beta$. 
 The below code draws a value for $\beta$ from an exponential distribution and places a move on it.
