--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1,13 +1,15 @@
 
 \section{Introduction}
 
-\citet{Ronquist2012a}
+\citet{Ronquist2012a} 
+
+Exercise is in Section \ref{sect:RB-ExerciseMain}.
 
 \subsection{Models}
 
 \subsubsection{Sequence Evolution}
 
-Point to other tutorials (e.g., GTR stuff)
+Point to other tutorials (e.g., GTR stuff) 
 
 \subsubsection{Morphological Character Change}
 
@@ -37,10 +39,15 @@ We tried to keep this tutorial very basic and introduce all the language concept
 You may only need the RB\_Basics\_Tutorial for a more in-depth discussion of concepts in \Rev.
 
 
+
+
+\section{Exercise: Estimating the Phylogeny and Divergence Times of Fossil and Extant Bears}\label{sect:RB-ExerciseMain}
+
+%TODO Background
 %%%%%%%%
 %%   Data   %%
 %%%%%%%%
-\section{Data and files}
+\subsection{Data and files}\label{subsect:RB-DataFiles}
 
 We provide the data file(s) which we will use in this tutorial.
 You may want to use your own data instead.
@@ -50,11 +57,9 @@ In the \cl{data} folder, you will find the following files
 \end{itemize}
 
 
-
-\section{Exercise: Title}\label{sect:RB-ExerciseMain}
-
 \bigskip
 \subsection{Getting Started}\label{subsect:RB-GetStart}
+
 
 %TODO Stuff about how to start or Rev basics?
 
@@ -256,7 +261,7 @@ moves[mvi++] = mvScale(death_rate, delta=1, weight=3.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-In order to print nodes in our graph to output (also called \textit{monitoring}), we need to create deterministic nodes for the diversification and turnover. 
+In order to print the states of model variables output files (also called \textit{monitoring}), we need to create deterministic nodes for the diversification and turnover. 
 Deterministic nodes are value transformations between existing stochastic nodes. 
 So we will define diversification and turnover as deterministic nodes.
 
