pre-merge commit

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -452,6 +452,9 @@ Enter the \Rev code provided in this section in this file.
 
 \medskip
 \subsubsection{Source Model Scripts}\label{subsub:RB-SourceMods}
+
+This step will load in the model scripts we have written in the text editor.
+
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 source("scripts/model_FBDP_TEFBD.Rev")
