updating morpho tikz #tefbd

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/figures/tikz/morpho_gm.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/figures/tikz/morpho_gm.tex
@@ -8,6 +8,7 @@
 \node (ex) at ($(pi)+(0,0.7)$) [centered]{\scriptsize discrete beta};
 \node (eb) at ($(beta)+(0,0.7)$) [centered]{\scriptsize exponential};
 \node[white, fill=brnt, shape=rectangle, rounded corners] at ($(Q)+(1.2,0)$) [right]{site matrices};
+\node[white, fill=brnt, shape=rectangle, rounded corners] at ($(pi)+(1.2,0)$) [right]{site frequencies};
 \draw [dtaro] (beta) -- (pi) ;
 \draw [taro] (lambda) -- (beta) ;
 \draw [dtaro] (pi) -- (Q) ;
