Revising the getting started tutorial

--- a/tutorial_TeX/RB_Getting_Started/figures/simple_GM_rev.tex
+++ b/tutorial_TeX/RB_Getting_Started/figures/simple_GM_rev.tex
@@ -1,3 +1,4 @@
+\definecolor{shc}{RGB}{183,207,237}
 \begin{tikzpicture}
 \node[obnode] (x) at (1,1) {\LARGE $x_i$};
 \node[detnode] (mu) at ($(x)+(-1,2)$) {\Large $\mu$};
