--- a/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial.tex
+++ b/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial.tex
@@ -13,13 +13,13 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large A Simple Binomial Model}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Mike May and Brian Moore}
+{\Large Mike May, Brian Moore and Sebastian H{\"o}hna}
 \vspace{1cm}
 \end{center}
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_Binomial_MCMC_content}
+\input{RB_MCMC_Intro_content}
 
 Version dated: \today
 
