--- a/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial.tex
+++ b/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial.tex
@@ -11,7 +11,7 @@
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large A Simple Binomial Model}}\\\vspace{2mm}
+\textbf{\it{\Large Introduction to MCMC Simulation using a Simple Binomial Model}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Mike May, Brian Moore and Sebastian H{\"o}hna}
 \vspace{1cm}
