--- a/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_content.tex
+++ b/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_content.tex
@@ -50,10 +50,15 @@ Furthermore, the solid circle of $x$ is shaded which means that the variable has
 \caption{A graphical model for the binomial model.}
 \end{figure}
 
+
+
 \section{Writing an MCMC from Scratch}
+
+\impmark Make yourself familiar with the example script called \emph{Binomial\_MH\_algorithm.Rev} which shows the code for the following sections. Then, start a new and empty script and follow each step provided in the \colorbox{shadecolor}{blue boxes}.
+
 \subsection{The Metropolis-Hastings Algorithm}
 Though \RevBayes implements efficient and easy-to-use Markov chain Monte Carlo algorithms, we'll begin by writing one ourselves to gain a better understanding of the moving parts.
-The Metropolis-Hastings MCMC algorithm \citep{Metropolis1953,Hasting1970} proceeds as follows:
+The Metropolis-Hastings MCMC algorithm \citep{Metropolis1953,Hastings1970} proceeds as follows:
 
 \begin{enumerate}
 	\item Generate initial values for the parameters of the model (in this case, $p$).
@@ -195,9 +200,10 @@ Here, we actually check if we want to store the value during this iteration.
 
 \subsection{Exercise 1}
 
-Write and execute this script (there is also an example file called \emph{Binomial\_MH\_algorithm.Rev}).
-The \texttt{.log} file will contain samples from the posterior distribution of the model!
-We can open the file in \texttt{Tracer} to learn about various features of the posterior distribution, for example: the posterior mean or the 95\% credible interval.
+\begin{enumerate}[label=\textnormal{Step \arabic*)}]
+	\item Write and execute this script (there is also an example file called \emph{Binomial\_MH\_algorithm.Rev}).
+	\item The \texttt{.log} file will contain samples from the posterior distribution of the model! Open the file in \Tracer to learn about various features of the posterior distribution, for example: the posterior mean or the 95\% credible interval.
+\end{enumerate}
 Pretty awesome, right?
 
 Below we show an example of the obtained output in \Tracer.
@@ -366,8 +372,8 @@ As before, this move has a tuning parameter called \emph{lambda}.
 
 \begin{framed}
 The sliding-window and scaling moves are very common and popular moves in \RevBayes.
-The code examples here are actually showing the exact same equation as implemented internally, with some minor performance difference.
-It will be very useful if you understand these moves.	
+The code examples here are actually showing the exact same equation as implemented internally, except the reflection at the boundaries.
+It will be very useful for you to understand these moves.	
 \end{framed}
 
 
@@ -375,13 +381,14 @@ It will be very useful if you understand these moves.
 
 \subsection{Exercise 2}
 
-Rewrite your previous script to include these three different moves now.
-Then, run the script to estimate the posterior distribution of $p$ again.
-Look at the output in \Tracer.
-Are the distributions, mean and credible interval the same?
-Did the ESS change?
-
-\impmark Add to each move a counter variable that counts how often the move was accepted. For example:
+\begin{enumerate}[label=\textnormal{Step \arabic*)}]
+	\item Rewrite your previous script to include these three different moves now.
+	\item Then, run the script to estimate the posterior distribution of $p$ again.
+	\item Look at the output in \Tracer.
+	\item Are the distributions, mean and credible interval the same?
+	\item Use only a single move and set \cl{printgen=1}. Which move has the best ESS?
+	\item How does the ESS change if you use a \cl{delta=10} for the sliding-window move?
+	\item Add to each move a counter variable that counts how often the move was accepted. For example:
 {\tt \begin{snugshade*}
 \begin{lstlisting}    
         if (u < R){
@@ -390,14 +397,16 @@ Did the ESS change?
             ++num_sliding_move_accepted
         } \end{lstlisting}
 \end{snugshade*}}
-Have a look at how the acceptance rate changes for different values of the tuning parameters.
+	\item Have a look at how the acceptance rate changes for different values of the tuning parameters.
+\end{enumerate}
+
 
 However, this MCMC algorithm is \emph{very} specific to our binomial model and thus hard to extend (also it's pretty inefficient!).
 
 
 \section{The Metropolis-Hastings Algorithm with the \emph{Real} \RevBayes}
 We'll now specify the exact same model in \Rev using the built-in modeling functionality.
-It turns out that the \Rev code to specify the above model is extremely simple.
+It turns out that the \Rev code to specify the above model is extremely simple and similar to the one we used before.
 Again, we start by ``reading in'' (\emph{i.e.},making up) our data.
 
 {\tt \begin{snugshade*}
@@ -425,7 +434,7 @@ We usually define (at least) one move per parameter immediately after we specify
 {\tt \begin{snugshade*}
 \begin{lstlisting}    
 # Define a move for our parameter, p
-moves[1] = mvSlide(p,delta=0.1)
+moves[1] = mvSlide(p,delta=0.1,weight=1)
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -464,15 +473,28 @@ analysis = mcmc(my_model, monitors, moves)
 
 # Run the MCMC
 analysis.run(100000)
+
+# Show how the moves performed
+analysis.operatorSummary()
 \end{lstlisting}
 \end{snugshade*}}
-Open the resulting \texttt{binomial\_MCMC.log} file in \texttt{Tracer}.
+\impmark Open the resulting \texttt{binomial\_MCMC.log} file in \texttt{Tracer}.
 Do the posterior distributions for the parameter $p$ look the same as the ones we got from our first analysis?
 
 Hopefully, you'll note that this \Rev model is substantially simpler and easier to read than the MH algorithm script we began with.
 Perhaps more importantly, this \Rev analysis is \emph{orders of magnitude} faster than our own script, because it makes use of extremely efficient probability calculations built-in to \RevBayes (rather than the ones we hacked together in our own algorithm).
 
-\subsection{Exercise}
+\subsection{Exercise 3}
+
+\begin{enumerate}[label=\textnormal{Step \arabic*)}]
+	\item Run the built-in MCMC and compare the results to your own MCMC. Are the posterior estimates the same? Are the acceptance rates of the moves similar?
+	\item Next, add a second move \cl{moves[2] = mvScale(p,lambda=0.1,tune=true,weight=1.0)} just after the first one.
+	\item Run the analysis again and compare the output.
+	\item Finally, run a pre-burnin using \cl{analysis.burnin(generations=10000,tuningInterval=200)} just before you call \cl{analysis.run(100000)}. This will auto-tune the tuning parameters (\EG \cl{delta} and \cl{lambda}) so that the acceptance ratio is between 0.4 and 0.5.
+	\item What are the tuned values for \cl{delta} and \cl{lambda}? Did the auto-tuning increase the ESS?
+\end{enumerate}
+
+\subsection{Exercise 4}
 Play around with various parts of the model to develop on intuition for both the Bayesian model and the MCMC algorithm.
 For example, how does the posterior distribution change as you increase the number of coin flips (say, increase both the number of flips and the number of heads by an order of magnitude)?
 How does the estimated posterior distribution change if you change the prior model parameters, $\alpha$ and $\beta$ (\IE is the model prior sensitive)?
